# GeminiPythonAPIExample

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: main.py
src/bp/: __init__.py  get_questions_use_case.py  use_case.py
src/bp/domain/: __init__.py  domain.py
src/bp/repositories/: __init__.py  gemini_repository.py
src/data/: __init__.py  gemini_repository_imp.py
src/di/: providers.py
src/endpoint/: app.py  questions_endpoint.py
